--- a/todo/app/globals.css
+++ b/todo/app/globals.css
@@ -113,6 +113,7 @@ input[type="file"] {
   transition: opacity 0.5s ease;
   pointer-events: none;
 }
+
 .file-modal label {
   padding: 0;
   display: flex;
@@ -151,36 +152,59 @@ input[type="file"] {
   gap: 10px;
 }
 
-.message {
+.text {
   margin-right: auto;
   border: 1px solid blue;
   border-radius: 20px;
   padding: clamp(5px, 7px, 10px);
-  color: green;
+  color: white;
   width: clamp(80px, 60%, 80%);
   height: clamp(100px, 400px, 100);
   display: flex;
+  background-color: green;
+
 }
 
 .message:nth-child(odd) {
-  background-color: green;
   color: yellow;
   margin: 0;
   margin-left: auto;
 }
 
-.message:target {
+.text:target {
   background-color: gold;
 }
 
-/* Add a pseudo-element inside the target element */
-.message:target::before {
+.text:target::before {
   font: 70% sans-serif;
   content: "►";
   color: limegreen;
 }
 
-/* Style italic elements within the target element */
-.message:target i {
+.text:target i {
   color: red;
+}
+
+.link {
+  border: 1px solid cyan;
+  background-color: cyan;
+  width: clamp(150px, 200px, 250px);
+  margin-right: 10px;
+  border-radius: 10px;
+}
+
+.link-content {
+  height: clamp(65px, 70px, 100px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  color: gray;
+}
+.link-name {
+  font-weight: 800;
+}
+
+.link-url {
+  font-weight: 100;
 }
