--- a/todo/app/todo/styles.module.css
+++ b/todo/app/todo/styles.module.css
@@ -7,7 +7,7 @@
   }
   
   .priorityContainer {
-    width: clamp(320px, 90%, 700px);
+    width: clamp(320px, 500px, 700px);
     background: #1c1c1c;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
@@ -55,7 +55,7 @@
   
   .icon {
     margin-left: auto;
-    margin-bottom: -0.5rem;
+    margin-bottom: 0.5rem;
   }
   
   .markdown {
